// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index html 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
  <title>Html prefetch css webpack plugin</title>
<link href=\\"moduleA.css\\" rel=\\"prefetch\\"><link href=\\"moduleB.css\\" rel=\\"prefetch\\"><link href=\\"index.css\\" rel=\\"stylesheet\\"></head>
<body>
  <div id=\\"root\\"></div>
<script type=\\"text/javascript\\" src=\\"index.bundle.js\\"></script></body>
</html>"
`;

exports[`second html 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
<head>
  <meta charset=\\"UTF-8\\">
  <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
  <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
  <title>Html prefetch css webpack plugin</title>
<link href=\\"moduleC.css\\" rel=\\"prefetch\\"></head>
<body>
  <div id=\\"root\\"></div>
<script type=\\"text/javascript\\" src=\\"second.bundle.js\\"></script></body>
</html>"
`;
